HARMONY-1978: Prevent toast getting cut off by higher z-index items

--- a/services/harmony/public/css/workflow-ui/default.css
+++ b/services/harmony/public/css/workflow-ui/default.css
@@ -83,3 +83,7 @@
 #create-label-link {
     word-wrap: break-word;
 }
+
+.toast, .toast-container {
+    z-index: 1021;
+}
